# rag-agentic-ai

./: .env.example  .gitignore  pyproject.toml
01-prompt-engineering-langchain-templates/: 01_zero_shot.py  02_one_shot.py  03_few_shot.py  04_reasoning.py  05_review_analyzer.py  README.md  llm_gemini.py
02-langchain-core-rag-agents/: 00_check_setup.py  01_models_messages.py  02_prompt_templates_lcel.py  03_structured_output.py  04_documents_splitters.py  05_embeddings_vectorstore.py  06_rag.py  07_memory.py  08_multi_step_chain.py  09_tools.py  10_agent.py  README.md  common.py  tools_lib.py  vectorstore_utils.py
02-langchain-core-rag-agents/data/: langchain_notes.txt
03-multi-provider-genai-flask/: README.md  ai_service.py  app.py  model_factory.py  provider_test.py
03-multi-provider-genai-flask/static/: script.js  styles.css
03-multi-provider-genai-flask/templates/: index.html
