[project]
name = "rag-agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "flask>=3.1.3",
    "langchain>=1.3.12",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-mistralai>=1.1.6",
    "langchain-nvidia-ai-endpoints>=1.4.3",
    "langchain-openai>=1.3.5",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.9",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.pyright]
extraPaths = [
  "01-prompt-engineering-langchain-templates",
  "02-langchain-core-rag-agents",
  "03-multi-provider-genai-flask"
]
